# juggling-tools

./: .env.example  .gitignore  .prettierignore  .prettierrc  AGENTS.md  README.md  TODOS.md  compose.dev.yml  compose.yml  eslint.config.js  knip.json  lefthook.yml  package.json  release-plz.toml
.changeset/: config.json  strong-phones-grab.md  wide-seals-lead.md
.github/workflows/: ci.yml  release-crate.yml  release.yml
engine/: Cargo.toml  Dockerfile
engine/crates/juggling-tools/: CHANGELOG.md  Cargo.toml
engine/crates/juggling-tools/src/: util.rs
engine/crates/juggling-tools/src/state_notation/: compute.rs  graph.rs  mod.rs  state.rs  table.rs
engine/src/: graph.rs  logging.rs  main.rs  params.rs  state.rs  transition.rs
engine/src/cache/: file.rs  memory.rs  precompute.rs  redis.rs
engine/src/routes/: graphs.rs  mod.rs  table.rs  throws.rs
mvp/: README.md  bun.lockb  index.ts  package.json
scripts/: dev.ts
server/: Dockerfile  drizzle.config.ts  package.json
server/drizzle/: 0000_oval_vance_astro.sql  0001_silly_vision.sql  0003_known_dragon_man.sql
server/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0003_snapshot.json  _journal.json
server/src/: index.ts
server/src/db/: index.ts  promote-admin.ts
server/src/db/schema/: auth.ts  example.ts  index.ts
server/src/lib/: auth.ts  compression.ts  constants.ts  engine.ts  json-error.ts  logger.ts  logging.ts  rate-limit.ts  require-auth.ts  schemas.ts
server/src/routes/: index.ts
server/src/routes/v1/: admin.ts  config.ts  contact.ts  graphs.ts  index.ts  onboarding.ts
server/src/routes/v1/state-notation/: graph.ts  index.ts  table.ts  throws.ts
web/: Caddyfile  Dockerfile  index.html  package.json  vite.config.ts
web/messages/: de.json  en.json  es.json  fr.json  nl.json  zh.json
web/project.inlang/: settings.json
web/src/: index.css  main.tsx  routeTree.gen.ts
web/src/components/: footer-panel.tsx  locale-toggle.tsx  query-form.tsx
web/src/components/builder/: builder-canvas.tsx  builder-simulator-panel.tsx
web/src/components/graph/: graph-canvas.tsx  graph-query-panel.tsx
web/src/components/onboarding/: animation-constants.ts  pattern-animation.tsx  slot-grid.tsx  state-graph-wizard.tsx  state-visualizer.tsx  throw-animation.tsx  wizard-step-ground-excited.tsx  wizard-step-how-throws-work.tsx  wizard-step-the-graph.tsx  wizard-step-welcome.tsx  wizard-step-what-is-state.tsx
web/src/components/scatter/: scatter-chart-canvas.tsx  scatter-chart-view.tsx
web/src/components/table/: state-table-canvas.tsx  state-table.tsx
web/src/components/ui/: chart.tsx  field.tsx  toggle-group.tsx  toggle.tsx
web/src/hooks/: use-graph-layout.ts  use-graphs.ts
web/src/lib/: admin-schemas.ts  auth-client.ts  binary-label.ts  builder-graph-data.ts  graph-layout.ts  graph-types.ts  schemas.ts  view-types.ts
web/src/pages/: graphs.tsx  login.tsx  signup.tsx  simulator.tsx
web/src/pages/admin/: users.tsx
web/src/queries/: admin.ts  config.ts  graphs.ts  table.ts  throws.ts
web/src/routes/: __root.tsx  _authed.tsx  login.lazy.tsx  signup.lazy.tsx  signup.tsx
web/src/routes/_authed/: builder.lazy.tsx  builder.tsx  index.lazy.tsx  index.tsx
web/src/workers/: graph-layout.worker.ts
