[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
bytes = "1"
moka = { version = "0.12", features = ["future"] }
redis = { version = "1.0", features = ["tokio-comp"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "net", "fs", "io-util"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
uuid = { version = "1", features = ["v4"] }
