[workspace]
members = ["crates/juggling-tools"]

[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
bytes = "1"
juggling-tools = { path = "crates/juggling-tools", features = ["serde", "rayon"] }
moka = { version = "0.12", features = ["future"] }
redis = { version = "1.0", features = ["tokio-comp"] }
serde = { version = "1.0.228", features = ["derive"] }
subtle = "2"
serde_json = { version = "1.0.149", features = ["preserve_order"] }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "net", "fs", "io-util"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
uuid = { version = "1", features = ["v4"] }
zstd = "0.13"

[features]
state-u8 = ["juggling-tools/state-u8"]
state-u16 = ["juggling-tools/state-u16"]
state-u64 = ["juggling-tools/state-u64"]
state-u128 = ["juggling-tools/state-u128"]
# Default (no state-* feature) = u32

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev.package."*"]
opt-level = 2
