[package]
name = "juggling-tools"
version = "0.1.1"
edition = "2024"
description = "Core juggling algorithms: state notation, transitions, and graph generation"
license = "MIT"
readme = "README.md"
repository = "https://github.com/calthejuggler/juggling-tools/tree/main/engine/crates/juggling-tools"
homepage = "https://jugglingtools.com"

[dependencies]
rayon = { version = "1.11", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]
rayon = ["dep:rayon"]
state-u8 = []
state-u16 = []
state-u64 = []
state-u128 = []
# Default (no state-* feature) = u32

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"
missing_debug_implementations = "deny"
missing_copy_implementations = "deny"
unreachable_pub = "deny"
elided_lifetimes_in_paths = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unused_qualifications = "deny"
single_use_lifetimes = "deny"
unused_lifetimes = "deny"

[lints.clippy]
# Groups (priority -1 so individual overrides win)
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Cherry-picked restriction lints — panic prevention
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "deny"

# Cherry-picked restriction lints — dev artifacts
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
print_stdout = "deny"
print_stderr = "deny"

# Cherry-picked restriction lints — code quality
str_to_string = "deny"
implicit_clone = "deny"
wildcard_enum_match_arm = "deny"
shadow_unrelated = "deny"
missing_assert_message = "deny"
get_unwrap = "deny"

# Pedantic overrides (allow)
module_name_repetitions = "allow"
must_use_candidate = "allow"

[lints.rustdoc]
broken_intra_doc_links = "deny"
missing_crate_level_docs = "deny"
invalid_codeblock_attributes = "deny"
invalid_rust_codeblocks = "deny"
bare_urls = "deny"
unescaped_backticks = "deny"
